--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,14 @@
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "two-balls-dropped-in-box"
-version = "0.0.1"
+version = "0.1.0"
+description = "A package to simulate two balls dropped in a box"
 authors = [
   { name="Mariza Wildschut", email="wildschutmariza@gmail.com" },
 ]
-description = "A package to simulate two balls dropped in a box"
-readme = "README.md"
-requires-python = ">=3.8"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
+dependencies = ["numpy>=1.2.1", "matplotlib>=3.9.2"]
 
-[project.urls]
-Homepage = "https://github.com/MWildschut/two-balls-dropped-in-box"
-Issues = "https://github.com/MWildschut/two-balls-dropped-in-box/issues"
+
